--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,5 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+/hw4 - neural nets/hw4 - neural nets.zip
+/hw4 - neural nets/hw4 - neural nets.rar
